@@ -1,6 +1,9 @@
 1998-03-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	* internal.h: Don't include X11/{Xlib,Xutil,xpm}.h if __WIN32__.
+	* internal.h: Don't include X11/xpm.h if __WIN32__.
+	gnu-win32 B19 supplies X11 header files.  
+
+        * internal.[hm]: Make width and height arguments unsigned.
 
 	* internal.m: Don't include tkobjc/Widget.m. Include internal.h
 	first.  Define BOOL to be BOOL_ to avoid conflict with Xmd.h.
